--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="r_p_s.js"></script>
-    <title>rock paper scissors</title>
+    <link rel="stylesheet" href="styles.css">
+    
+    <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    
+
+    <div class="game">
+        <h2>Player Choice: <span id="player-choice"></span></h2>
+        <h2>Computer Choice: <span id="computer-choice"></span></h2>
+        <h2>Result: <span id="result"></span></h2>
+    </div>
+
+    <div class="button">
+        <button id="rock">✊</button>
+        <button id="paper">✋</button>
+        <button id="scissors">✌</button>
+    </div>
+
+
+    <script src="r_p_s.js" charset="UTF-8"></script>
 </body>
 </html>
