add html score-display game-display
dom id for player, computer score and first to 5 game result

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <button id="scissors">✌</button>
     </div>
 
+    <div class="score-display">
+        <span id="player-score">0</span>
+        <span> : </span>
+        <span id="computer-score">0</span>
+    </div>
+
+    <div>
+        <span id="game-display"></span>
+    </div>
+
 
     <script src="r_p_s.js" charset="UTF-8"></script>
 </body>
